--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,8 @@ path = "src/dns/lib.rs"
 name = "dnsparser"
 path = "src/parse.rs"
 
+[[bin]]
+name = "dnsclient"
+path = "src/client.rs"
+
 [dependencies]
